--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
     <div class="main-container">
         <h1>Hello there</h1>
         <h1>Well?</h1>
+        <div class="sub-container">
+            <h2>how about now?</h2>
+        </div>
     </div>
 </body>
 </html>
