--- a/index.html
+++ b/index.html
@@ -4,13 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <script src="scripts/mylist.js" defer></script>
     <script src="scripts/script.js" defer></script>
     <title>Hangman</title>
 </head>
 <body>
+    <div id="popUpBox">
+        <img src="images/trophy.png" alt="result" id="gameOverImage">
+        <h2>Game Over</h2>
+        <p>Hidden word was <strong><span id="hiddenWord">word</span></strong>.</p>
+        <p id="playAgainButton">Play Again</p>
+    </div>
     <div class="main-container">
-        <h1>Hello there</h1>
-        <h1>Well?</h1>
         <div class="sub-container">
             <h2>how about now?</h2>
         </div>
