--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Hangman</title>
 </head>
 <body>
-    <section class="main-container">
+    <section class="main-container" id="gameHolder">
         <article id="popUpBox">
             <img src="images/trophy.png" alt="result" id="gameOverImage">
             <h2>Game Over</h2>
