--- a/index.html
+++ b/index.html
@@ -23,7 +23,36 @@
             <h2 id="wordToGuess">word</h2>
             <p>Hint: <span id="hintDisplay">something we use everyday something we use everyday something we use everyday</span></p>
             <p>Incorrect guesses: <span id="wrongGuesses"></span></p>
-            <article id="keyBoardMap"></article>
+            <article id="keyBoardMap">
+                <ul>
+                    <li>A</li>
+                    <li>B</li>
+                    <li>C</li>
+                    <li>D</li>
+                    <li>E</li>
+                    <li>F</li>
+                    <li>G</li>
+                    <li>H</li>
+                    <li>I</li>
+                    <li>J</li>
+                    <li>K</li>
+                    <li>L</li>
+                    <li>M</li>
+                    <li>N</li>
+                    <li>O</li>
+                    <li>P</li>
+                    <li>Q</li>
+                    <li>R</li>
+                    <li>S</li>
+                    <li>T</li>
+                    <li>U</li>
+                    <li>V</li>
+                    <li>W</li>
+                    <li>X</li>
+                    <li>Y</li>
+                    <li>Z</li>
+                </ul>
+            </article>
         </section>
     </section>
 </body>
