--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <article id="popUpBox">
-        <img src="images/trophy.png" alt="result" id="gameOverImage">
-        <h2 id="endGame">Game Over</h2>
-        <p>Hidden word was <strong><span id="hiddenWord">word</span></strong>.</p>
+        <img src="#" alt="result" id="gameOverImage">
+        <h2 id="endGame">Game message</h2>
+        <p><span id="popUpText"></span> <strong><span id="hiddenWord">word</span></strong>.</p>
         <p id="playAgainButton">Play Again</p>
     </article>
     <section class="main-container" id="gameHolder">
